[package]
name = "micromap"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/yegor256/micromap"
description = "The fastest alternative to HashMap, for maps smaller than 20 keys"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yegor256/micromap"
keywords = ["memory", "map"]
categories = ["data-structures", "memory-management"]

[dependencies]
serde = { version = "1.0.196", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.3.3"
hashbrown = "0.14.0"
heapless = "0.8.0"
rustc-hash = "1.1.0"
nohash-hasher = "0.2.0"
tinymap = "0.4.0"
linked-hash-map = "0.5.6"
linear-map = "1.2.0"
indexmap = "2.2.1"
litemap = "0.7.0"

[features]
default = []
std = []