# SPDX-FileCopyrightText: Copyright (c) 2023-2025 Yegor Bugayenko
# SPDX-License-Identifier: MIT

[package]
name = "micromap"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
repository = "https://github.com/yegor256/micromap"
description = "The fastest alternative to HashMap, for maps smaller than 20 keys"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yegor256/micromap"
keywords = ["memory", "map"]
categories = ["data-structures", "memory-management"]

[dependencies]
serde = { version = "1.0.200", optional = true, default-features = false }
bincode = { version = "2.0.1", optional = true, default-features = false, features = ["serde"] }

[dev-dependencies]
hashbrown = "0.15.0"
heapless = "0.8.0"
rustc-hash = "2.0.0"
nohash-hasher = "0.2.0"
tinymap = "0.4.0"
linked-hash-map = "0.5.6"
linear-map = "1.2.0"
indexmap = "2.2.6"
litemap = "0.8.0"
flurry = "0.5.2"
criterion = "0.5.1"
seq-macro = "0.3.6"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
uuid = { version = "1.16.0", default-features = false, features = ["v4"] }
foldhash = { version = "0.1.5", default-features = false }

[features]
default = []
std = []
serde = ["dep:serde", "dep:bincode"]

# Ref: https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577/3
[package.metadata.docs.rs]
all-features = true
rust-toolchain = "nightly"
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false

[[test]]
name = "random"
