[package]
name = "micromap-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
micromap = { path = "../" }
libfuzzer-sys = "0.4"
arbitrary = "1.3"

[dev-dependencies]
rand = "0.9.2"

[profile.release]
debug = true

[workspace]
# Keep this fuzz crate isolated from the main workspace.

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_map_basic"
path = "fuzz_targets/fuzz_map_basic.rs"
